Read name from MatchFound payload and create name for each
