# app/SearchApi/SearchAdapter.Sample/SearchRequest/PersonSearchEventSample.cs
@@ -64,6 +64,22 @@ namespace SearchAdapter.Sample.SearchRequest
         public string DateType { get; set; }
     }
 
+    public class NameSample : Name
+    {
+        public string Type { get; set; }
+
+        public DateTime? EffectiveDate { get; set; }
+        public DateTime? EndDate { get; set; }
+
+        public string FirstName { get; set; }
+
+        public string LastName {get; set; }
+
+        public string MiddleName {get; set; }
+
+        public string Description { get; set; }
+    }
+
     public class PersonSearchRejectedEvent : PersonSearchRejected
     {
 
